established data model, made first entries

--- a/index.html
+++ b/index.html
@@ -5,6 +5,27 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 </head><body>
 
-
+<h2>Graphics API Wrapper Matrix</h2>
+<table class="matrix"><tr><td></td>
+<th>Direct3D 9</th>
+<th>Direct3D 11</th>
+</tr>
+<tr><th>Direct3D 11</th>
+<td><a href="https://github.com/Joshua-Ashton/dxup" target="_blank">DXUP</a>
+</td>
+<td class="empty">&mdash;</td>
+</tr>
+<tr><th>Direct3D 12</th>
+<td><a href="https://github.com/microsoft/D3D9On12" target="_blank">D3D9on12</a>
+</td>
+<td class="empty">&mdash;</td>
+</tr>
+<tr><th>Vulkan</th>
+<td><a href="https://github.com/doitsujin/dxvk" target="_blank">DXVK</a>
+</td>
+<td><a href="https://github.com/doitsujin/dxvk" target="_blank">DXVK</a>
+</td>
+</tr>
+</table>
 
 </body></html>
