--- a/template.html
+++ b/template.html
@@ -7,4 +7,7 @@
 
 <matrix id="wrappers">
 
+<p>Only active projects that have seen updates in the previous years and target
+non-obsolete APIs have been included here.</p>
+
 </body></html>
